[package]
name = "noclip"
version = "0.3.1"
authors = ["John M Archer <archer884@zoho.com"]
edition = "2021"
homepage = "https://github.com/archer884/noclip"
repository = "https://github.com/archer884/noclip"
documentation = "https://github.com/archer884/noclip"
license = "Unlicense"
description = """
A tool for copy/paste to and from stdin/stdout.
"""

[dependencies]
arboard = "3.3.1"
clap = { version = "4.5.1", features = ["derive"] }
thiserror = "1.0.57"
