[package]
name = "noclip"
version = "0.3.3"
authors = ["John M Archer <archer884@zoho.com"]
edition = "2021"
homepage = "https://github.com/archer884/noclip"
repository = "https://github.com/archer884/noclip"
documentation = "https://github.com/archer884/noclip"
license = "Unlicense"
description = """
A tool for copy/paste to and from stdin/stdout.
"""

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
thiserror = "2.0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
